# openenv-trustshield

./: .dockerignore  Dockerfile  Dockerfile_UV  README.md  docker-compose.yml  grader.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
agents/: random_agent.py  rule_based_agent.py
app/: models.py  tasks.py
app/server/: app.py  environment.py  main.py  openenv_app.py
server/: app.py
tests/: test_environment.py
