[project]
name = "trustshield-v1"
version = "0.1.0"
description = "TrustShield v1 is a Trust & Safety investigation benchmark based on OpenEnv."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.95.0",
    "openenv>=0.1.13",
    "openenv-core==0.2.3",
    "pydantic>=2.12.5",
    "requests>=2.33.1",
    "uvicorn>=0.22.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
]
