[project]
name = "trustshield"
version = "0.1.0"
description = "TrustShield is a Trust & Safety investigation benchmark based on OpenEnv."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.95.0",
    "openai>=2.30.0",
    "openenv==0.1.13",
    "openenv-core==0.2.3",
    "pydantic>=2.12.5",
    "requests>=2.33.1",
    "uvicorn>=0.22.0",
]
[project.scripts]
server = "app.server.main:main"
[dependency-groups]
dev = [
    "pytest>=8.2.0",
]
